# sign2text-LSTM

./: .gitignore  LICENSE  README.md  main_workflow.py  pyproject.toml
src/generate_dataset/: __init__.py  data_config.py  generate_dataset.py
src/inference_pipeline/: inference_pipeline.py
src/training_pipeline/: data_preprocess.py  main.py  train_model.py
src/video/: live_video.py  mediapipe_landmarks.py
